objects/FSLABB_ServiceOrderDispatchNotification__e.object
<CustomObject>
    <description>FSL US3577 When first SA of the Work Order gets dispatched, send out this notification</description>
    <fields>
        <fullName>FSLABB_RecordEntity__c</fullName>
        <description>The Salesforce API Name of the Object from which the event is triggered</description>
        <label>Record Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_RecordId__c</fullName>
        <description>The Id of the record that triggered the update.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPId__c</fullName>
        <description>The SAP Id (Service Order, Operation) to be updated.</description>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPSystem__c</fullName>
        <description>The SAP system this record is related to.</description>
        <label>SAP System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_UserFederationId__c</fullName>
        <description>Federation Id of the user triggering the event.</description>
        <label>ABB Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Service Order Dispatch Notification</label>
    <pluralLabel>FSL Service Order Dispatch Notifications</pluralLabel>
</CustomObject>